--- a/eShop/index.html
+++ b/eShop/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div class="bg-green-500 text-white flex justify-center">coucou</div>
+    <div id='root'></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
